--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "three": "^0.141.0",
     "uuid": "^8.3.2",
     "vite-tsconfig-paths": "^3.4.1"
   },
@@ -22,6 +23,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/three": "^0.140.0",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
