--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
     "easystarjs": "^0.4.4",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
