--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
+    "editorconfig": true,
     "printWidth": 90,
     "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
-    "tabWidth": 4,
     "quoteProps": "preserve",
     "overrides": [
         {
