--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
     "easystarjs": "^0.4.4",
+    "emittery": "^0.11.0",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -32,6 +33,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "c8": "^7.11.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vitest": "^0.16.0"
