--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "types": ["vitest/globals"],
     "paths": {
