--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "ts": "tsc --noEmit"
@@ -25,6 +26,7 @@
     "vite-tsconfig-paths": "^3.4.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
