--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "ts": "tsc --noEmit"
+    "ts": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -36,6 +37,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "c8": "^7.11.3",
+    "husky": "^7.0.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
