--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "Renderable",
     "wireframe"
   ],
-  "vitest.enable": true
+  "vitest.enable": true,
+  "testing.automaticallyOpenPeekView": "never"
 }
