Implement our own XState machine interpreter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,5 @@
     "Renderable",
     "wireframe"
   ],
-  "vitest.enable": true,
-  "testing.automaticallyOpenPeekView": "never"
+  "vitest.enable": true
 }
