--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
-    "@xstate/fsm": "^2.0.0",
     "easystarjs": "^0.4.4",
     "emittery": "^0.11.0",
     "lodash": "^4.17.21",
@@ -25,8 +24,7 @@
     "react-dom": "^18.0.0",
     "stats.js": "^0.17.0",
     "three": "^0.141.0",
-    "uuid": "^8.3.2",
-    "vite-tsconfig-paths": "^3.4.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
@@ -42,6 +40,7 @@
     "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
+    "vite-tsconfig-paths": "^3.5.0",
     "vitest": "^0.16.0"
   }
 }
