--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "easystarjs": "^0.4.4",
     "emittery": "^0.11.0",
     "lodash": "^4.17.21",
+    "lz-string": "^1.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "stats.js": "^0.17.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/lodash": "^4.14.182",
+    "@types/lz-string": "^1.3.34",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/stats.js": "^0.17.0",
