--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.2",
+    "@radix-ui/react-accordion": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "easystarjs": "^0.4.4",
     "emittery": "^0.11.0",
     "lodash": "^4.17.21",
@@ -24,6 +25,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "stats.js": "^0.17.0",
+    "styled-system": "^5.1.5",
     "three": "^0.141.0",
     "uuid": "^8.3.2"
   },
@@ -34,6 +36,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/stats.js": "^0.17.0",
+    "@types/styled-system": "^5.1.15",
     "@types/three": "^0.140.0",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
