--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@radix-ui/react-accordion": "^1.0.0",
+    "@radix-ui/react-slider": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "easystarjs": "^0.4.4",
     "emittery": "^0.11.0",
