--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "c8": "^7.11.3",
+    "happy-dom": "^6.0.4",
     "husky": "^7.0.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.3",
