Refactor project to use pnpm for package management
Changes:
- Updated .gitignore to remove yarn-related entries
- Replaced yarn commands with pnpm in deploy.sh and GitHub Actions workflow
- Added pnpm lockfile and specified package manager in package.json
- Removed yarn.lock file
- Adjusted pre-commit hook to use pnpm
- Minor refactor in createConfig.ts for better readability

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          yarn install
-          yarn ts
-          yarn test
-          yarn build
+          pnpm install
+          pnpm ts
+          pnpm test
+          pnpm build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
