Update GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,27 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧
-        run: |
-          pnpm install
-          pnpm ts
-          pnpm test
-          pnpm build
+      - name: Setup Node.js 🟢
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Setup pnpm 📦
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Install dependencies 📥
+        run: pnpm install
+
+      - name: Type check 🔍
+        run: pnpm ts
+
+      - name: Run tests 🧪
+        run: pnpm test
+
+      - name: Build 🔧
+        run: pnpm build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
